--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 title: "EasyMariaDB" 
 description: >
- Una utilidad para facilitar la creación desde LibreOffice de bases de datos y usuarios de MariaDB/MySQL
+ Una utilidad para facilitar la creación desde LibreOffice 
+ de bases de datos y usuarios de MariaDB/MySQL
